# echelon

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh  fast-build.bat  index.html  params.json
diagrams/: compiler-overview.dia  create-compile-plan.dia
documentation/: all-diagrams.md
include/echelon/: optional.hpp
include/echelon/ast/: AstNode.hpp  AstNodeType.hpp  ast-node-type-enum.hpp  ast-node.hpp
include/echelon/code-generation/: code-generator-factory.hpp  code-generator.hpp  generator-lookup.hpp  generator.hpp
include/echelon/compiler/: echelon-compiler.hpp  integrity-check.hpp
include/echelon/linker/: linker.hpp  scope-pusher.hpp
include/echelon/parser/: encoding-query.hpp  keyword-enum.hpp  match-data.hpp  token-expr-info.hpp  token-expr-matcher.hpp  token-expr.hpp  token-type-enum.hpp  token.hpp  tokenizer.hpp
include/echelon/runner/: runner-data.hpp  spidermonkey-runner.hpp
include/echelon/string/: string-util.hpp  tizer.hpp
include/echelon/transform/: TypeDeductionEngine.hpp  ast-enhancer-output.hpp  ast-enhancer.hpp  ast-node-enhancer-input-data.hpp  ast-node-enhancer-output-data.hpp  custom-type-handler.hpp  name-resolver.hpp  scope-helper.hpp  transform-working-data.hpp  type-deducer.hpp  type-deduction-engine.hpp  type-event-data.hpp  type-events.hpp  type-rule-lookup.hpp
include/echelon/util/: ast-to-graphviz.hpp  echelon-lookup.hpp  enum-class-iterator.hpp  iterator-util.hpp  spidermonkey-runner.hpp  stream-dump.hpp  stream-logger.hpp  to-string.hpp
include/elm/ast/: AstNode.hpp  AstNodeType.hpp
scripts/: build-release.bat  build-release.sh  build.bat  build.sh  coverage.sh  diagrams.sh  doc.sh  doxygen.sh  fast-build-release.bat  fast-build.bat  package-docs.sh  package-release.sh  test.gv
snippets/cases/: branch-prune.ech  function-return-anonymous-type.elm  implement-interface.ech  use-behaviour.ech  use-modules.elm  use-trait.elm
snippets/fundamentals/: behaviour.ech  branching.elm  comment.elm  enum.elm  field.ech  function.ech  function.elm  implement-method.ech  interface.elm  iterate.ech  method.elm  module.ech  package.elm  ranges.ech  trait.elm  types.elm  use.elm  variable.elm
src/: CMakeLists.txt  main.cpp
src/ast/: AstNode.cpp  CMakeLists.txt  ast-node.cpp
src/ast/scope/: scope-helper.cpp
src/ast/transform-stage/: enhanced-ast-block-node.cpp  enhanced-ast-function-prototype-node.cpp  node-enhancer-lookup.cpp
src/code-generation/: CMakeLists.txt  code-generator-factory.cpp  generator-lookup.cpp  generator.cpp
src/code-generation/echelon/: echelon-code-generator.cpp  echelon-code-generator.hpp
src/code-generation/spider-monkey-js/: spider-monkey-js-code-generator.cpp  spider-monkey-js-code-generator.hpp  spider-monkey-js-generators.cpp  spider-monkey-js-generators.hpp
src/compiler/: CMakeLists.txt  echelon-compiler.cpp  integrity-check.cpp
src/linker/: CMakeLists.txt  linker.cpp  scope-pusher.cpp
src/model/: CMakeLists.txt
src/model/ast/: ast-node.cpp
src/model/context/: context-item.cpp  context.cpp
src/model/internal/: enhanced-ast-block-node.cpp  enhanced-ast-function-prototype-node.cpp  node-enhancer-lookup.cpp
src/model/scope/: scope-helper.cpp  scope-pusher.cpp
src/parser/: CMakeLists.txt  character-query.cpp  echelon-lookup.cpp  encoding-query.cpp  match-data.cpp  parser.cpp  token-expr-info.cpp  token-expr-matcher.cpp  token-expr.cpp  token-type-enum.cpp  token.cpp  tokenizer.cpp
src/parser/impl/: character-query.cpp
src/parser/lookup/: echelon-lookup.cpp
src/parser/parser-data/: parser-data-load.cpp  parser-data-load.hpp  parser-stage-1-data-load.cpp  parser-stage-2-data-load.cpp  parser-stage-2-helper.cpp
src/parser/stage1/: character-matcher-lookup.cpp  character-pattern-element.cpp  character-pattern-group.cpp  character-pattern-lookup.cpp  character-pattern-parser.cpp  character-pattern.cpp  token.cpp  tokenizer.cpp
src/parser/stage2/: ast-construction-manager.cpp  ast-transform-data.cpp  ast-transform-lookup.cpp  ast-transform.cpp  echelon-lookup.cpp  enhanced-token.cpp  matcher-lookup.cpp  matcher.cpp  nested-pattern-lookup.cpp  parser-internal-input.cpp  parser-internal-output.cpp  parser.cpp  pattern-match-info.cpp  pattern-translator.cpp  token-pattern-element.cpp  token-pattern-group.cpp  token-pattern-lookup.cpp  token-pattern.cpp
src/parser/tokenizer-impl/: character-query.cpp  character-query.hpp  extractor-for-assignment.cpp  extractor-for-assignment.hpp  extractor-for-equality.cpp  extractor-for-equality.hpp  extractor-for-line-comment.cpp  extractor-for-line-comment.hpp  extractor-for-multi-line-comment.cpp  extractor-for-multi-line-comment.hpp  extractor-for-strings.cpp  extractor-for-strings.hpp  extractor.hpp  parse-data.cpp  parse-data.hpp
src/runner/: CMakeLists.txt  runner-data.cpp  spidermonkey-runner.cpp
src/string/: CMakeLists.txt  string-util.cpp  tizer.cpp
src/transform/: CMakeLists.txt  TypeDeductionEngine.cpp  ast-enhancer.cpp  ast-node-enhancer-input-input-data.cpp  ast-node-enhancer-input-output-data.cpp  custom-type-handler.cpp  name-resolver.cpp  scope-helper.cpp  type-deducer.cpp  type-deduction-engine.cpp  type-events.cpp  type-rule-lookup.cpp
src/transform/transform-data/: ast-enhancer-data.cpp  ast-enhancer-helper.cpp  operator-precedence-tree-restructurer.cpp  type-rule-data-load.cpp
src/util/: CMakeLists.txt  ast-to-graphviz.cpp  echelon-lookup.cpp  iterator-util.cpp  spidermonkey-runner.cpp  stream-dump.cpp  stream-logger.cpp  string-util.cpp  tizer.cpp  to-string.cpp
src/util/logging/: logger-shared-instance.cpp  logger.cpp  noop-stream-logger.cpp  stream-logger-level.cpp  stream-logger.cpp
test/: ast-enhancer-test-suite.hpp  ast-test-suite.hpp  compiler-spider-monkey-js-test-suite.hpp  context-path-test-suite.hpp  name-resolver-test-suite.hpp.hpp  operator-precedence-tree-restructurer-test.hpp  parser-snippets-test-suite.hpp  parser-stage-1-test-suite.hpp  parser-stage-2-test-suite.hpp  parser-test-suite.hpp  source-map-data-test-suite.hpp  type-deducer-test-suite.hpp
(+79 files in other folders)
